--- a/assets/css/secure-api-footer-widget.css
+++ b/assets/css/secure-api-footer-widget.css
@@ -23,7 +23,7 @@ body {
     right: 0;
     margin: 20px;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    /* border-radius: 8px; */
     overflow: hidden;
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -91,9 +91,9 @@ body {
 }
 
 /* Jummah Row Styles */
-.jummah-row {
+/* .jummah-row {
     background-color: #ffc107;
-}
+} */
 
 /* Text Danger Styles */
 .text-danger {
